force-app/main/default/objects/breg_Search_Log__c/breg_Search_Log__c.object-meta.xml
<CustomObject>
    <description>Stores search log entries for BREG Name Clearance searches including search terms, filters, and request details</description>
    <label>BREG Search Log</label>
    <nameField>
        <displayFormat>SL-{0000000}</displayFormat>
        <label>Search Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BREG Search Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>