force-app/main/default/objects/breg_Search_Log__c/fields/breg_Case__c.field-meta.xml
<CustomField>
    <fullName>breg_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Case for this search log</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>BREG Search Logs</relationshipLabel>
    <relationshipName>BREG_Search_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>