force-app/main/default/objects/breg_Search_Log__c/fields/breg_Data_Sources__c.field-meta.xml
<CustomField>
    <fullName>breg_Data_Sources__c</fullName>
    <description>Comma-separated list of data sources used in the search (current, historical, reservations)</description>
    <label>Data Sources</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>current</fullName>
                <default>true</default>
                <label>Current/Active Names</label>
            </value>
            <value>
                <fullName>historical</fullName>
                <label>Historical Names</label>
            </value>
            <value>
                <fullName>reservations</fullName>
                <label>Name Reservations</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>