force-app/main/default/objects/breg_Search_Log__c/fields/breg_Match_Type__c.field-meta.xml
<CustomField>
    <fullName>breg_Match_Type__c</fullName>
    <description>The type of match used in the search (exact, beginswith, contains, phonetic)</description>
    <label>Match Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>exact</fullName>
                <label>Exact Match</label>
            </value>
            <value>
                <fullName>beginswith</fullName>
                <label>Begins With</label>
            </value>
            <value>
                <fullName>contains</fullName>
                <default>true</default>
                <label>Contains</label>
            </value>
            <value>
                <fullName>phonetic</fullName>
                <label>Phonetic Match</label>
            </value>
            <value>
                <fullName>alphabetical</fullName>
                <label>Alphabetical</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>