force-app/main/default/objects/breg_Search_Log__c/fields/breg_Normalized_Search_Term__c.field-meta.xml
<CustomField>
    <fullName>breg_Normalized_Search_Term__c</fullName>
    <description>The normalized version of the search term after cleaning and standardization</description>
    <label>Normalized Search Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>