force-app/main/default/objects/breg_Search_Log__c/fields/breg_Rejected_Name__c.field-meta.xml
<CustomField>
    <fullName>breg_Rejected_Name__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the searched name was rejected</description>
    <label>Rejected Name</label>
    <type>Checkbox</type>
</CustomField>