force-app/main/default/objects/breg_Search_Log__c/fields/breg_Results_Count__c.field-meta.xml
<CustomField>
    <fullName>breg_Results_Count__c</fullName>
    <description>Number of results returned by the search</description>
    <label>Results Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>