force-app/main/default/objects/breg_Search_Log__c/fields/breg_Search_DateTime__c.field-meta.xml
<CustomField>
    <fullName>breg_Search_DateTime__c</fullName>
    <description>Date and time when the search was performed</description>
    <label>Search Date/Time</label>
    <type>DateTime</type>
</CustomField>