force-app/main/default/objects/breg_Search_Log__c/fields/breg_Search_Duration_MS__c.field-meta.xml
<CustomField>
    <fullName>breg_Search_Duration_MS__c</fullName>
    <description>Search execution time in milliseconds</description>
    <label>Search Duration (MS)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>