force-app/main/default/objects/breg_Search_Log__c/fields/breg_Search_Request_JSON__c.field-meta.xml
<CustomField>
    <fullName>breg_Search_Request_JSON__c</fullName>
    <description>JSON representation of the complete search request including all parameters and filters</description>
    <label>Search Request JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>