force-app/main/default/objects/breg_Search_Log__c/fields/breg_Search_Status__c.field-meta.xml
<CustomField>
    <fullName>breg_Search_Status__c</fullName>
    <description>Status of the search execution (Success, Error, Timeout)</description>
    <label>Search Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
                <default>true</default>
                <label>Success</label>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Timeout</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>