force-app/main/default/objects/breg_Search_Log__c/fields/breg_Search_Term__c.field-meta.xml
<CustomField>
    <fullName>breg_Search_Term__c</fullName>
    <description>The search term entered by the user for name clearance search</description>
    <label>Search Term</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>