force-app/main/default/objects/breg_Search_Log__c/fields/breg_Search_User__c.field-meta.xml
<CustomField>
    <fullName>breg_Search_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who performed the search</description>
    <label>Search User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>BREG Search Logs</relationshipLabel>
    <relationshipName>BREG_Search_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>